# ps

5570_DEC/: 5nodes  range_partition_manager.hpp
5570_DEC/base/: abstract_partition_manager.hpp  message.hpp  node.hpp  range_partition_manager.hpp
5570_DEC/comm/: mailbox.cpp  mailbox.hpp
5570_DEC/driver/: engine.cpp  engine.hpp  simple_id_mapper.cpp  simple_id_mapper_test.cpp  worker_spec.cpp
5570_DEC/io/: hdfs_assigner.cpp
5570_DEC/lib/: abstract_data_loader.hpp  batchiterator.hpp  kdd_sample.hpp  labeled_sample.hpp  parser.hpp
5570_DEC/scripts/: 5node  Lstart.py  launch.py  lr_launch.py  start.py
5570_DEC/server/: map_storage.hpp  pending_buffer.cpp  pending_buffer.hpp  progress_tracker.cpp  server_thread.cpp
5570_DEC/server/consistency/: asp_model.cpp  bsp_model.cpp  ssp_model.cpp
5570_DEC/server/util/: pending_buffer.hpp  progress_tracker.cpp
5570_DEC/test/: CMakeLists.txt  linear_regression.cpp  lr.cpp  mf.cpp  simple_example.cpp  svm.cpp  test_hdfs_read.cpp
5570_DEC/worker/: abstract_callback_runner.hpp  kv_client_table.hpp  worker_thread.hpp
